<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_title">Search…</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="calendar">Calendar</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="work_interval">Work interval:</string>
    <string name="delete">Delete</string>
    <string name="add_note">Add Note</string>
    <string name="day_id" translatable="false">day_id</string>
</resources>