<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/appBar"
        app:layout_scrollFlags="scroll|enterAlways"
        >
        <include android:id="@+id/toolbarLayout"
            layout="@layout/toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout"
        android:fitsSystemWindows="true"
        android:paddingHorizontal="8dp"
        android:paddingBottom="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:weightSum="7"
            android:id="@+id/dayOfWeekLayout"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintBottom_toTopOf="@id/calendarGridView">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/mo"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tu"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/we"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/th"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/fr"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/sa"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/su"/>
        </LinearLayout>

        <GridView
            android:id="@+id/calendarGridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:horizontalSpacing="8dp"
            android:isScrollContainer="false"
            android:scrollbars="none"
            android:numColumns="7"
            android:verticalSpacing="8dp"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/dayOfWeekLayout"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
